--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    border: 1px solid red;
     background-color: hsl(0, 0%, 8%);
     align-content: center;
     height: 100vh;
@@ -23,18 +22,15 @@ img {
 }
 
 div#conteiner {
-    border: 1px solid red;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 8px;
     padding: 0px 24px;
-    margin: 0px;
 } 
 
 
 div#filho {
-    border: 1px solid red;
     background-color: hsl(0, 0%, 12%);
     width: 279px;
     height: 531px;
@@ -49,20 +45,16 @@ div#filho {
 h1 {
     color: hsl(0, 0%, 100%);
     text-align: center;
-    font-family: var(--font-principal);
+    font: 600 24px var(--font-principal);
     width: 279px;
     height: 36px;
-    font-weight: 600;
-    font-size: 24px;
     line-height: 36px;
 }
 
-p#verd {
+p#verde {
     color: hsl(75, 94%, 57%);
     text-align: center;
-    font-family: var(--font-principal);
-    font-size: 14px;
-    font-weight: 700;
+    font: 700 14px var(--font-principal);
     line-height: 21px;
     width: 279px;
     height: 21px;
@@ -71,11 +63,8 @@ p#verd {
 p {
     color: hsl(0, 0%, 100%);
     text-align: center;
-    font-family: var(--font-principal);
-    font-size: 14px;
-    font-weight: 400;
     line-height: 21px;
-    
+    font: 400 14px var(--font-principal);
 }
 
 nav > a {
@@ -91,10 +80,8 @@ nav > a {
     margin:  8px;
     width: 255px;
     height: 21px;
-    font-family: var(--font-principal);
-    font-size: 14px;
-    font-weight: 700;
     line-height: 21px;
+    font: 700 14px var(--font-principal);
 }
 
 nav > a:hover {
