--- a/estilos/style.css
+++ b/estilos/style.css
@@ -49,6 +49,7 @@ h1 {
     width: 279px;
     height: 36px;
     line-height: 36px;
+    margin-block-end: 0em;
 }
 
 p#verde {
@@ -58,6 +59,7 @@ p#verde {
     line-height: 21px;
     width: 279px;
     height: 21px;
+    margin-top: 5px;
 }
 
 p {
@@ -65,6 +67,8 @@ p {
     text-align: center;
     line-height: 21px;
     font: 400 14px var(--font-principal);
+    margin-block-end: 24px;
+    margin-top: 0px;
 }
 
 nav > a {
