--- a/estilos/style.css
+++ b/estilos/style.css
@@ -49,7 +49,8 @@ h1 {
     width: 279px;
     height: 36px;
     line-height: 36px;
-    margin-block-end: 0em;
+    margin-block-start: 24px;
+    margin-block-end: 0em; 
 }
 
 p#verde {
@@ -71,7 +72,7 @@ p {
     margin-top: 0px;
     width: 279px;
     height: 21px;
-    margin-bottom: 7px;
+    margin-bottom: 4px;
 }
 
 nav > a {
